<resources>
    <string name="app_name">Pra_Assesment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_persegi_panjang">Persegi Panjang</string>
    <string name="btn_segitiga">Segitiga</string>
    <string name="hint_panjang">Panjang</string>
    <string name="hint_lebar">Lebar</string>
    <string name="btn_hitung_hasil_pp">Hitung</string>
    <string name="persegi_panjang_title">Persegi Panjang</string>
    <string name="luas_pp">Luas =</string>
    <string name="keliling_pp">Keliling =</string>

    <string name="segitiga_title">Segitiga</string>
    <string name="hint_alas">Alas</string>
    <string name="hitung_segitiga">Hitung</string>
    <string name="hint_tinggi">Tinggi</string>
    <string name="luas_segitiga">Luas =</string>
    <string name="keliling_segitiga">Keliling =</string>
    <string name="share_segitiga">Share</string>
    <string name="share_pp">Share</string>
    <string name="menu_about">About</string>
    <string name="hasil_pp">Hasil Hitung =</string>
    <string name="hasil_segitiga">Hasil Segitiga =</string>
    <string name="nama_about">Siva Nur S</string>
    <string name="nim">6706184014</string>
    <string name="Kelas">42-02</string>
</resources>
