<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.PersegiPanjangFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/inp_panjang"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginTop="124dp"
                android:hint="@string/hint_panjang"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.134"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/inp_lebar"
                android:hint="@string/hint_lebar"
                app:layout_constraintStart_toStartOf="@+id/inp_panjang"
                app:layout_constraintEnd_toEndOf="@+id/inp_panjang" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/inp_panjang"/>
        <Button
                android:text="@string/btn_hitung_hasil_pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_hitung_pp" app:layout_constraintStart_toStartOf="@+id/inp_lebar"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/inp_lebar"/>
        <TextView
                android:text="@string/persegi_panjang_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_pp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp" android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        <TextView
                android:text="@string/luas_pp"
                android:layout_width="68dp"
                android:layout_height="23dp"
                android:id="@+id/luas_pp"
                app:layout_constraintEnd_toEndOf="@+id/btn_hitung_pp"
                app:layout_constraintStart_toStartOf="@+id/btn_hitung_pp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung_pp"
                android:layout_marginTop="64dp"
                app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/keliling_pp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/luas_pp"
            app:layout_constraintEnd_toEndOf="@+id/luas_pp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/luas_pp"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/keliling_pp"/>
        <Button
                android:text="@string/share_pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_share_pp" app:layout_constraintStart_toStartOf="@+id/keliling_pp"
                android:layout_marginStart="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/keliling_pp"/>
        <TextView
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvluas" tools:text="0" app:layout_constraintStart_toEndOf="@+id/luas_pp"
                android:layout_marginStart="28dp" android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung_pp"/>
        <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvkeliling" tools:text="0" app:layout_constraintStart_toEndOf="@+id/keliling_pp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvluas"/>
        <TextView
                android:text="@string/hasil_pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/btn_hitung_pp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung_pp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="336dp"
                tools:layout_editor_absoluteX="152dp" android:id="@+id/tvhasil" tools:text="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>