<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.AboutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/nama_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nama" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nim" app:layout_constraintStart_toStartOf="@+id/nama"
                app:layout_constraintEnd_toEndOf="@+id/nama" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/nama"/>
        <TextView
                android:text="@string/Kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Kelas" app:layout_constraintStart_toStartOf="@+id/nim"
                app:layout_constraintEnd_toEndOf="@+id/nim" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nim"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>